force-app/main/default/objects/Reference_PEO_Medical_UW__c/Reference_PEO_Medical_UW__c.object-meta.xml
<CustomObject>
    <label>Reference PEO Medical UW</label>
    <nameField>
        <displayFormat>PEO UW-{000000}</displayFormat>
        <label>Reference PEO Medical UW Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference PEO Medical UWs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>