force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Agency_Quote_Parity__c.field-meta.xml
<CustomField>
    <fullName>Agency_Quote_Parity__c</fullName>
    <label>Agency Quote Parity %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>