force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Bands_Down__c.field-meta.xml
<CustomField>
    <fullName>Bands_Down__c</fullName>
    <label>Bands Down</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>