force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Date_Submitted_to_UW__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_to_UW__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Submitted to UW</label>
    <type>DateTime</type>
</CustomField>