force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Discrepancies_from_Intake__c.field-meta.xml
<CustomField>
    <fullName>Discrepancies_from_Intake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discrepancies from Intake</label>
    <type>Checkbox</type>
</CustomField>