force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Effective_Date_for_Medical__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_for_Medical__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date for Medical</label>
    <type>Date</type>
</CustomField>