force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Employer_Contribution_Level_Lg_Group__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contribution_Level_Lg_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Contribution Level (Lg Group)</label>
    <length>26</length>
    <type>Text</type>
</CustomField>