force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/GRX_Credible__c.field-meta.xml
<CustomField>
    <fullName>GRX_Credible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GRX Credible</label>
    <type>Checkbox</type>
</CustomField>