force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/H_B_Segment__c.field-meta.xml
<CustomField>
    <fullName>H_B_Segment__c</fullName>
    <label>H&amp;B Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual 1</fullName>
            </value>
            <value>
                <fullName>Virtual 2</fullName>
            </value>
            <value>
                <fullName>Field 1</fullName>
            </value>
            <value>
                <fullName>Field 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>