force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/HR_Specialist__c.field-meta.xml
<CustomField>
    <fullName>HR_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_PEO_Medical_UWs6</relationshipName>
    <type>Lookup</type>
</CustomField>