force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Intake_Discrepancies__c.field-meta.xml
<CustomField>
    <fullName>Intake_Discrepancies__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intake Discrepancies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>