force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Loss_Runs__c.field-meta.xml
<CustomField>
    <fullName>Loss_Runs__c</fullName>
    <label>Loss Runs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>