force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Medical_Questionnaires_Lg_group__c.field-meta.xml
<CustomField>
    <fullName>Medical_Questionnaires_Lg_group__c</fullName>
    <label>Medical Questionnaires (Lg group)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>