force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/of_Years_With_Carrier__c.field-meta.xml
<CustomField>
    <fullName>of_Years_With_Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># of Years With Carrier</label>
    <length>26</length>
    <type>Text</type>
</CustomField>