force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Option_to_SR_Given__c.field-meta.xml
<CustomField>
    <fullName>Option_to_SR_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Option to SR Given</label>
    <type>Checkbox</type>
</CustomField>