force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/PEO_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>PEO_Group_Type__c</fullName>
    <label>PEO Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paychex - Current Client</fullName>
            </value>
            <value>
                <fullName>PEO to PEO</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Virgin</fullName>
            </value>
            <value>
                <fullName>ASO to PEO - HRG Submit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>