force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Related_Fed_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Fed_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Fed ID</label>
    <type>TextArea</type>
</CustomField>