force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Released_Band_3__c.field-meta.xml
<CustomField>
    <fullName>Released_Band_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Released Band 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>