force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/RX_Hit_Rate__c.field-meta.xml
<CustomField>
    <fullName>RX_Hit_Rate__c</fullName>
    <label>RX Hit Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>