force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/UW_SLA__c.field-meta.xml
<CustomField>
    <fullName>UW_SLA__c</fullName>
    <label>UW SLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>48 (2 Business days)</fullName>
            </value>
            <value>
                <fullName>72 (3 Business days)</fullName>
            </value>
            <value>
                <fullName>96 (4 Business days)</fullName>
            </value>
            <value>
                <fullName>120 (5 Business days)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>