force-app/main/default/objects/Reference_PEO_Medical_UW__c/fields/Zip_Rates_and_Verification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Zip_Rates_and_Verification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zip Rates and Verification Sent</label>
    <type>Checkbox</type>
</CustomField>