force-app/main/default/objects/Reference_PEO_Medical_UW__c/validationRules/Date_Submitted_must_have_a_value_if_Inta.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Submitted_must_have_a_value_if_Inta</fullName>
    <active>true</active>
    <description>Date Submitted must have a value if Intake Specialist is entered.</description>
    <errorConditionFormula>!ISBLANK(Intake_Specialist__c) &amp;&amp; ISBLANK( Date_Submitted__c )</errorConditionFormula>
    <errorDisplayField>Date_Submitted__c</errorDisplayField>
    <errorMessage>Date Submitted must have a value if Intake Specialist is entered.</errorMessage>
</ValidationRule>