force-app/main/default/objects/Reference_PEO_Medical_UW__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Submitted_As_Name__c</columns>
    <columns>District__c</columns>
    <columns>State__c</columns>
    <columns>Intake_Specialist__c</columns>
    <columns>Underwriter__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>NSC__c</columns>
    <columns>Fed_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>