force-app/main/default/objects/Reference_PEO_Medical_UW__c/listViews/Chris_PEOSA_PRISM_Deals.listView-meta.xml
<ListView>
    <fullName>Chris_PEOSA_PRISM_Deals</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Sales_Analyst_Submission_Status__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Date_Submitted_to_PEOSA__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Infopath_Sent__c</columns>
    <columns>Total_EE_Count__c</columns>
    <columns>NSC__c</columns>
    <columns>Banding_Status__c</columns>
    <columns>Underwriter__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <columns>Quote_Platform__c</columns>
    <columns>Date_Underwriting_Approved_for_H_B__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PEOSA__c</field>
        <operation>equals</operation>
        <value>Chris Flanders</value>
    </filters>
    <filters>
        <field>Opportunity_Record_Type__c</field>
        <operation>contains</operation>
        <value>Prism</value>
    </filters>
    <filters>
        <field>Date_Submitted_to_PEOSA__c</field>
        <operation>greaterThan</operation>
        <value>10/1/2021 12:00 AM</value>
    </filters>
    <label>Chris PEOSA PRISM Deals</label>
</ListView>