force-app/main/default/objects/Reference_PEO_Medical_UW__c/listViews/ClientSpace_deals_Approved.listView-meta.xml
<ListView>
    <fullName>ClientSpace_deals_Approved</fullName>
    <booleanFilter>1 AND 2 AND (3 or 4) and 5</booleanFilter>
    <columns>NAME</columns>
    <columns>NSC__c</columns>
    <columns>DSM__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>PEOSA__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Banding_Status__c</columns>
    <columns>Approval_Reason__c</columns>
    <columns>State__c</columns>
    <columns>Total_EEs__c</columns>
    <columns>Date_Submitted_to_UW__c</columns>
    <columns>Approved_Rate_Band_UW__c</columns>
    <columns>Underwriter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Banding_Status__c</field>
        <operation>startsWith</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Sales_Analyst_Submission_Status__c</field>
        <operation>notContain</operation>
        <value>Final</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Tony Borrero,Bill Durbin Jr,Chris Flanders,Kimberly Habermann,Cheron Phelps</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Leydiana Viana,John Chittenden,Casey Martin</value>
    </filters>
    <filters>
        <field>ClientSpace_Deal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ClientSpace deals - Approved</label>
    <sharedTo>
        <role>HRSVP</role>
    </sharedTo>
</ListView>