force-app/main/default/objects/Reference_PEO_Medical_UW__c/listViews/ClientSpace_deals_Approved_w_no_Status.listView-meta.xml
<ListView>
    <fullName>ClientSpace_deals_Approved_w_no_Status</fullName>
    <booleanFilter>1 AND 2 and 3</booleanFilter>
    <columns>NAME</columns>
    <columns>NSC__c</columns>
    <columns>DSM__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>PEOSA__c</columns>
    <columns>Underwriter__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Date_Submitted_to_UW__c</columns>
    <columns>Banding_Status__c</columns>
    <columns>Approval_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClientSpace_Deal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Approval_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Banding_Status__c</field>
        <operation>equals</operation>
        <value>,2-UW Review,1-Intake Review,3-Pending Further Info,4-Pending Carrier Review</value>
    </filters>
    <label>ClientSpace deals - Approved w no Status</label>
    <sharedTo>
        <role>HRSVP</role>
        <role>PEONewBusinessContractualRep</role>
    </sharedTo>
</ListView>