force-app/main/default/objects/Reference_PEO_Medical_UW__c/listViews/ClientSpace_deals_Waiting_on_Sales_Rep.listView-meta.xml
<ListView>
    <fullName>ClientSpace_deals_Waiting_on_Sales_Rep</fullName>
    <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>NSC__c</columns>
    <columns>DSM__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>PEOSA__c</columns>
    <columns>Underwriter__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Date_Submitted_to_PEOSA__c</columns>
    <columns>Sales_Analyst_Submission_Status__c</columns>
    <columns>Date_Submitted_to_UW__c</columns>
    <columns>Banding_Status__c</columns>
    <columns>Incomplete_Submission__c</columns>
    <columns>Field_Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClientSpace_Deal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Banding_Status__c</field>
        <operation>notContain</operation>
        <value>Approved,Abandoned,Final</value>
    </filters>
    <filters>
        <field>Sales_Analyst_Submission_Status__c</field>
        <operation>equals</operation>
        <value>Waiting on Sales Rep</value>
    </filters>
    <filters>
        <field>Banding_Status__c</field>
        <operation>equals</operation>
        <value>3-Pending Further Info</value>
    </filters>
    <label>ClientSpace deals - Waiting on Sales Rep</label>
    <sharedTo>
        <role>HRSVP</role>
    </sharedTo>
</ListView>