force-app/main/default/objects/Reference_PEO_Medical_UW__c/listViews/ClientSpace_Strategic_Accounts.listView-meta.xml
<ListView>
    <fullName>ClientSpace_Strategic_Accounts</fullName>
    <columns>NAME</columns>
    <columns>NSC__c</columns>
    <columns>DSM__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>H_B_Sales_Rep__c</columns>
    <columns>Underwriter__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Sales_Analyst_Submission_Status__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Banding_Status__c</columns>
    <columns>Date_Underwriting_Approved_for_H_B__c</columns>
    <columns>Date_Submitted_to_Agency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClientSpace_Deal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>District__c</field>
        <operation>equals</operation>
        <value>093</value>
    </filters>
    <label>ClientSpace Strategic Accounts</label>
    <sharedTo>
        <role>HNBFDIRECTOR</role>
        <role>HRSVP</role>
    </sharedTo>
</ListView>