force-app/main/default/objects/Reference_PEO_Medical_UW__c/listViews/Copy_of_CS_Diane_s_Reps_Deals_Approved.listView-meta.xml
<ListView>
    <fullName>Copy_of_CS_Diane_s_Reps_Deals_Approved</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 and 5 and (6 or 7)</booleanFilter>
    <columns>NAME</columns>
    <columns>NSC__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>PEOSA__c</columns>
    <columns>Underwriter__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Banding_Status__c</columns>
    <columns>Approved_Rate_Band_UW__c</columns>
    <columns>Approval_Date__c</columns>
    <columns>Parity_Percent__c</columns>
    <columns>Date_Underwriting_Approved_for_H_B__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Banding_Status__c</field>
        <operation>startsWith</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Banding_Status__c</field>
        <operation>notContain</operation>
        <value>Final</value>
    </filters>
    <filters>
        <field>Banding_Status__c</field>
        <operation>notContain</operation>
        <value>Abandoned</value>
    </filters>
    <filters>
        <field>Sales_Analyst_Submission_Status__c</field>
        <operation>notContain</operation>
        <value>Abandoned</value>
    </filters>
    <filters>
        <field>ClientSpace_Deal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NSC__c</field>
        <operation>contains</operation>
        <value>Kathy Tornow,Molly Dolejsi,Sean Hurr,Scott Iller</value>
    </filters>
    <filters>
        <field>NSC__c</field>
        <operation>contains</operation>
        <value>Sabrina Stout,Sara Poe,Wendie Parrish</value>
    </filters>
    <label>Z12 CS Jenn&apos;s Team - Deals Approved</label>
    <sharedTo>
        <role>PEO_NSC_District_1</role>
        <role>PEO_NSC_District_2</role>
        <role>PEO_NSC_Sales_Rep_1</role>
        <role>PEO_Specialty_Sales_HR_Services_Rep_102</role>
    </sharedTo>
</ListView>