force-app/main/default/objects/Reference_PEO_Medical_UW__c/listViews/Copy_of_PEOSA_Gretchen_Med_UW_Deals.listView-meta.xml
<ListView>
    <fullName>Copy_of_PEOSA_Gretchen_Med_UW_Deals</fullName>
    <columns>NAME</columns>
    <columns>PEO_Underwriting_Checklist__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Sales_Analyst_Submission_Status__c</columns>
    <columns>Date_Submitted_to_PEOSA__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Underwriter__c</columns>
    <columns>Banding_Status__c</columns>
    <columns>Sales_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PEOSA__c</field>
        <operation>equals</operation>
        <value>Vanida Potts</value>
    </filters>
    <filters>
        <field>Sales_Analyst_Submission_Status__c</field>
        <operation>notEqual</operation>
        <value>Abandoned,Complete</value>
    </filters>
    <label>PEOSA Vanida Med UW Deals</label>
</ListView>