force-app/main/default/objects/Reference_PEO_Medical_UW__c/listViews/CS_Mark_s_Reps_Deals_In_Progress.listView-meta.xml
<ListView>
    <fullName>CS_Mark_s_Reps_Deals_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>NSC__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>PEOSA__c</columns>
    <columns>Underwriter__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Sales_Analyst_Submission_Status__c</columns>
    <columns>Date_Submitted_to_PEOSA__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Banding_Status__c</columns>
    <columns>Approved_Rate_Band_UW__c</columns>
    <columns>Approval_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DSM__c</field>
        <operation>equals</operation>
        <value>Mark Reeder</value>
    </filters>
    <filters>
        <field>Banding_Status__c</field>
        <operation>notContain</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Banding_Status__c</field>
        <operation>notContain</operation>
        <value>Final</value>
    </filters>
    <filters>
        <field>Banding_Status__c</field>
        <operation>notContain</operation>
        <value>Abandoned</value>
    </filters>
    <filters>
        <field>Sales_Analyst_Submission_Status__c</field>
        <operation>notContain</operation>
        <value>Abandoned</value>
    </filters>
    <label>Z6 CS Mark&apos;s Reps - Deals In Progress</label>
    <sharedTo>
        <role>HRSVP</role>
        <role>HRSZONE6</role>
        <role>HRS_DISTRICT_45</role>
        <role>HRS_SALES_REP_DISTRICT_45</role>
    </sharedTo>
</ListView>